# pico-blink

./: .gitignore  CMakeLists.txt  blink.cpp  flake.nix  flash.sh  hello.c
